Newsletter.html has issues with the div covering the whole page while the other pages have been merged with no issues. Will continue to resolve this issue, may need to add specific css for the page to rectify the issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,8 +91,8 @@ main {
 #egypt-newsletter {
     padding: 50px 10px 5px;
     width:100%;
-    height: 400px;
-    background-color: rgba(223, 149, 71, 1);
+    height: 40px;
+    background-color: black;
     text-align: center;
 }
 
